# HyQ_model

./: README.md  purecmaes.m
hyq/: fwdKin.m  getHipPos.m  getLegData.m  loadFigOptions.m  plotLegs.m  plotRobot.m  test.m  updateKinematics.m
hyq/hyq/: Roy_model.m  compositeInertia.m  inertiaProperties.m  initForceTransforms.m  initHomogeneousTransforms.m  initJacobians.m  initMotionTransforms.m  inverseDynamics.m  updateForceTransforms.m  updateHomogeneousTransforms.m  updateJSIM.m  updateJacobians.m  updateMotionTransforms.m  update_homogeneous.m
hyq_dw14/: fit_cost_params.m  hyq.m  hyq.xml  hyq2max.xml  hyq2max_terrain.xml  hyq2max_terrain_back.xml  hyq2max_terrain_flip.xml  hyq2max_test.xml  hyqRearingRollout.m  hyqRearingRollout_th.m  hyqTestPos.m  hyq_do_Rollout.m  hyq_do_Rollout_rearing.m  hyq_do_Rollout_right.m  hyq_do_Rollout_right_back.m  hyq_do_Rollout_right_flip.m  hyq_do_Rollout_right_savefull.m  hyq_green.xml  hyq_green_step5.xml  hyq_green_terrain.xml  hyq_green_terrain_mountaincar.xml  hyq_green_terrain_simple.xml  joint_position_plotter.m  loadPrevSol.m  plotFeet.m  purecmaes_hyq_jump.m  purecmaes_hyq_jump_tmp.m  purecmaes_hyq_rearing.m  purecmaes_hyq_rearing_tmp.m  purecmaes_hyq_selfRighting.m  purecmaes_hyq_selfRighting_tmp.m  quat2rpy.m  rollout_plotter_script.m  storedInitialisation.m  task_hyq_jump.m  task_hyq_jump_cost2.m  task_hyq_selfRighting.m  task_hyq_selfRighting_tmp.m  task_hyqrearingmotion.m  task_hyqrearingmotion_tmp.m  (+12 more)
hyq_matode/: hyq.m  hyq.xml  readme.md
hyq_matode/matode-0.31/: Instalation.txt
hyq_matode/matode-0.31/doc/: .project  matode.html  matode.tex
hyq_matode/matode-0.31/toolbox/: matode.mexa64  odesim.m
hyq_matode/matode-src/: BUILDING.Ubuntu  README.txt
hyq_matode/matode-src/dbl/platform/control/: CMakeLists.txt  STG.h  control.cmake
hyq_matode/matode-src/dbl/platform/gui/qt/: CMakeLists.txt  GLWidget.cpp  qt.cmake
hyq_matode/matode-src/dbl/platform/io/configuration/: CMakeLists.txt  XMLConfiguration.cpp  configuration.cmake
hyq_matode/matode-src/dbl/platform/io/logging/: Log2.h  MexLog.h  mexlogging.cmake
hyq_matode/matode-src/dbl/platform/io/logging/mex/: CMakeLists.txt  MexLog2.cpp
hyq_matode/matode-src/dbl/platform/math/: CMakeLists.txt  Statistics.cpp  Statistics.h  fastfunc.h  math.cmake
hyq_matode/matode-src/dbl/platform/simulation/odesim/: CMakeLists.txt  GenericODESim.h  ODEObjects.cpp  ODEObjects.h  odesim.cmake
hyq_matode/matode-src/dbl/platform/simulation/odesim/matlab/: CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui  DialogUI.h  MatlabODE.cpp  MatlabODE.h  Simulator.cpp  Simulator.h  create_ui_header.sh  matode.cpp  mountaincar.xml
hyq_matode/matode-src/dbl/platform/simulation/simvis/: CMakeLists.txt  simvis.cmake
hyq_matode/matode-src/dbl/platform/time/: Stopwatch.hpp  SystemTimer.hpp
hyq_matode/matode-src/dbl/ports/win32/: CMakeLists.txt  win32.cmake  win32_pre.cmake
hyq_matode/matode-src/dbl/ports/win32/include/: mqueue.h  win32_compat.h
hyq_matode/matode-src/dbl/ports/win32/lib/: ode_double.lib  ode_double_x64.lib
hyq_matode/matode-src/dbl/ports/win32/src/: mqueue.cpp  time.cpp
hyq_matode/matode-src/dbl/utilities/matode/: CHANGELOG.txt  README.txt
hyq_matode/matode-src/dbl/utilities/matode/toolbox/: odesim.m
